# policyuniverse

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: python-publish.yml  pythonpackage.yml  updater.yml
iampoliciesgonewild/: __init__.py  master_permissions.json
policyuniverse/: __init__.py  action.py  action_categories.json  action_categories.py  action_groups.py  apiapi.py  arn.py  common.py  condition.py  data.json  expander_minimizer.py  master_permissions.json  organization.py  policy.py  statement.py
policyuniverse/tests/: helpers.py  test_action_categories.py  test_action_groups.py  test_arn.py  test_common.py  test_expander_minimizer.py  test_organization.py  test_policy.py  test_statement.py
tests/: TestMethods.py
updater/: awsconsole.js  requirements.txt  service.py  service_action.py  test_service.py  test_service_action.py  updater.py
