[metadata]
description-file = README.md

[wheel]
universal = 1

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[flake8]
max-line-length = 127
statistics = True
max-complexity = 10
; policyuniverse/__init__.py has strangely-ordered imports to avoid circular dependencies
extend-exclude = policyuniverse/__init__.py
